--- a/src/report/4-result.Rmd
+++ b/src/report/4-result.Rmd
@@ -1,4 +1,4 @@
-# Result and Discussion {#resdis}
+# Result and Discussion {#result}
 ```{r, echo = FALSE, message = FALSE, results = 'hide', warning = FALSE}
 data <- read.csv(mp(DATA_DIR, "data.csv"), stringsAsFactors = FALSE)
 value <- data[, c(1,2,3,4,6,8,10)]
@@ -51,7 +51,7 @@ knitr::kable(
 )  
 ```
 
-From both the plot and the table, we can see that both algorithms actually does much better than expected, the percentage error falls way below 50%. This might have to do with the way we **randomly** generate the problem instances, since it is often the edge case that results in the 50% error. Also, we can see that the maximum percentage error produced by <span style="font-variant:small-caps;">FPTAS</span> is way less than that of <span style="font-variant:small-caps;">Greedy</span>. This could be due to the mechanism of each algorithm. In section \@ref(algorithms), we mentioned that <span style="font-variant:small-caps;">Greedy</span> has a totally different approach to choose the items and has a final step where it might disregard previously obtained results and just choose the item with maximum value; whereas <span style="font-variant:small-caps;">FPTAS</span> essentially uses <span style="font-variant:small-caps;">MinCostDP</span> and its errors are due to the truncation while scaling up and down the values of items.
+From both the plot and the table, we can see that both algorithms actually do much better than expected, the percentage errors fall way below 50%. This might have to do with the way we **randomly** generate the problem instances, since it is often the edge cases that result in the 50% error. Also, we can see that the maximum percentage error produced by <span style="font-variant:small-caps;">FPTAS</span> is way less than that of <span style="font-variant:small-caps;">Greedy</span>. This could be due to the mechanism of each algorithm. In section \@ref(algorithms), we mentioned that <span style="font-variant:small-caps;">Greedy</span> has a totally different approach to choosing the items and has a final step where it might disregard previously obtained results and just choose the item with maximum value; whereas <span style="font-variant:small-caps;">FPTAS</span> essentially uses <span style="font-variant:small-caps;">MinCostDP</span> and its errors are due to the truncation while scaling up and down the values of items, which potentially results in smaller errors.
 
 
 
@@ -90,18 +90,18 @@ knitr::kable(
 )  
 ```
 
-Nonetheless, through the running time summary only, we can already see a general trend in running time. <span style="font-variant:small-caps;">Greedy</span> is the clear winner in terms of speed. We have mentioned in section \@ref(algorithms) that the running time of <span style="font-variant:small-caps;">Greedy</span> is majorly contributed by the sorting step--the choosing step after that is rather trivial. As such, the running time depends on the input size, not the values of the items, not the budget. 
+Through the running time summary alone, we can already see a general trend in the running time. <span style="font-variant:small-caps;">Greedy</span> is the clear winner in terms of speed. We have mentioned in section \@ref(algorithms) that the running time of <span style="font-variant:small-caps;">Greedy</span> is majorly contributed by the sorting step--the choosing step after that is rather trivial. As such, the running time depends on the input size, not the values of the items, not the budget. 
 
 <span style="font-variant:small-caps;">MaxValDP</span> has a significantly higher running time as compared to that of <span style="font-variant:small-caps;">Greedy</span>. This is expected as we can see the in the summary of instance information, the budget is much larger than the number of instance.
 
-Another observation is that <span style="font-variant:small-caps;">FPTAS</span> and <span style="font-variant:small-caps;">MinCostDP</span> have almost similar running time. Again this can be explained by the fact that <span style="font-variant:small-caps;">FPTAS</span> uses <span style="font-variant:small-caps;">MinCostDP</span> internally. Their running time, though, is almost 3 times as big as that of <span style="font-variant:small-caps;">MaxValDP</span>. This totally depends on the choice of budget and the maximum value of item in the problem instance.
+Another observation is that <span style="font-variant:small-caps;">FPTAS</span> and <span style="font-variant:small-caps;">MinCostDP</span> have almost similar running time. Again this can be explained by the fact that <span style="font-variant:small-caps;">FPTAS</span> uses <span style="font-variant:small-caps;">MinCostDP</span> internally; i.e. <span style="font-variant:small-caps;">FPTAS</span> takes slightly longer due to the scaling and trunscating steps. Their running time, though, is almost 3 times as big as that of <span style="font-variant:small-caps;">MaxValDP</span>. This totally depends on the choice of budget and the maximum value of item in the problem instance.
 
 ``` {r plot-function, include = TRUE, echo = FALSE, fig.cap='Running time of MinCostDP (left) and MaxValDP (right)', fig.show = 'asis', fig.align = 'center', fig.height = 5, fig.width = 7.5}
 par(bg = BACKGROUND_COLOR)
 op = par(mfrow=c(1, 2))
 points3D(x = time$`Max Value`, y = time$N, z = time$MinCostDP, phi = -5, theta = 56, xlab = "Max Value", ylab = "N", zlab = "Optimal Value", bty = NULL, pch = 1, cex = 0.05, cex.lab = 0.6, colkey = FALSE, col = ramp.col (col = c(COLOR[["Blue"]], COLOR[["Red"]]), n = 100000, alpha = 1))
-points3D(x = time$Budget, y = time$N, z = time$MaxValDP, phi = -5, theta = 35, xlab = "Budget", ylab = "N", zlab = "Optimal Value", bty = NULL, pch = 1, cex = 0.05, cex.lab = 0.6, colkey = FALSE, col = ramp.col (col = c(COLOR[["Blue"]], COLOR[["Red"]]), n = 100000, alpha = 1))
+points3D(x = time$Budget, y = time$N, z = time$MaxValDP, phi = -5, theta = 23, xlab = "Budget", ylab = "N", zlab = "Optimal Value", bty = NULL, pch = 1, cex = 0.05, cex.lab = 0.6, colkey = FALSE, col = ramp.col (col = c(COLOR[["Blue"]], COLOR[["Red"]]), n = 100000, alpha = 1))
 par(op)
 ```
 
-Since we conduct the experiment with changing value of $N$, we can then make 3D plots of running time against $N$ and the budget for <span style="font-variant:small-caps;">MaxValDP</span> and running time against $N$ and the maximum value for <span style="font-variant:small-caps;">MinCostDP</span>. Refer to figure \@ref(fig:plot-function), for <span style="font-variant:small-caps;">MinCostDP</span>, based on the curvature of the plot surface, we can see that the relationship between $N$ and the optimal value is clearly non-linear, in fact, we can even see that it is indeed quadratic as mentioned in section \@ref(algorithms). Whereas, for <span style="font-variant:small-caps;">MaxValDP</span>, we can see that the budget and $N$ seem to be linearly related to the optimal value.
+Since we conduct the experiment with changing values of $N$, we can then make 3D plots of running time against $N$ and the budget for <span style="font-variant:small-caps;">MaxValDP</span> and running time against $N$ and the maximum value for <span style="font-variant:small-caps;">MinCostDP</span>. Refer to figure \@ref(fig:plot-function), for <span style="font-variant:small-caps;">MinCostDP</span>, based on the curvature of the plot surface, we can see that the relationship between $N$ and the optimal value is clearly non-linear, in fact, we can even see that it is indeed quadratic as the theory suggested. Whereas, for <span style="font-variant:small-caps;">MaxValDP</span>, we can see that the budget and $N$ seem to be linearly related to the optimal value.
