--- a/src/report/1-methodology.Rmd
+++ b/src/report/1-methodology.Rmd
@@ -17,12 +17,10 @@ For this experiment, we generate 100 random instances of Maximum 0-1 Knapsack pr
 * Each item's value is an integer not exceeding 1000.
 * Each item's cost is an integer not exceeding 1000.
 
-Since we are also interested in exploring the running time of each algorithm, we decide that we will vary $N$ within a range of values. By experiment, we found out that 700 items is probably the upper bound for the number of items we can have given the constraints for each item's maximum cost and value, otherwise our machine will run out of memory. We try for relatively small $N$ starting from 10 and increment by 10 per iteration, i.e. $N \in \{10, 20 \ldots 690, 700\}$. As for the maximum value of each item's cost and value, because these just indicate the upper bounds for the cost and value of each item, there is little value in varying them.
-
-For each problem instance, we solve them using the 4 mentioned algorithms and record the optimal values obtained as well as the running times.
+Since we are also interested in exploring the running time of each algorithm, we decide that we will vary $N$ within a range of values. By experiment, we found out that 700 items is probably the upper bound for the number of items we can have given the constraints on each item's maximum cost and value, otherwise our machine will run out of memory. We try for relatively small $N$ starting from 10 and increment by 10 per iteration, i.e. $N \in \{10, 20 \ldots 690, 700\}$. As for the maximum value of each item's cost and value, because these just indicate the upper bounds for the cost and value of each item, there is little value in varying them. In short, for each problem instance, we will solve it using the 4 mentioned algorithms and record the optimal values obtained as well as the running times.
 
 ## 3SAT
 
-For this experiment, we plan to generate 100 random instances of 3SAT problem. For each, we reduce from 3SAT to 1in3SAT, to SubsetSum, and finally to Decision 0-1 Knapsack [@oconnell2013]. For the reduction from SubsetSum to Decision 0-1 Knapsack, we obtain an usual Knapsack problem where the budget and the target value are identical and where each item's cost and value are identical. We thus, can use <span style="font-variant:small-caps;">MaxValDP</span> and <span style="font-variant:small-caps;">MinCostDP</span> to find the optimal value. This values is then compared with the target value to decide if the original 3SAT problem instance is satisfiable. The reason why we cannot use <span style="font-variant:small-caps;">Greedy</span> nor <span style="font-variant:small-caps;">FPTAS</span> is that we need the optimal value (with no error) to compare with the target.
+For this experiment, we plan to generate 100 random instances of 3SAT problem. For each, we reduce from 3SAT to 1in3SAT, to SubsetSum, and finally to Decision 0-1 Knapsack [@oconnell2013]. For the reduction from SubsetSum to Decision 0-1 Knapsack, we obtain an usual Knapsack problem where the budget and the target value are identical and where each item's cost and value are identical. We thus, can use <span style="font-variant:small-caps;">MaxValDP</span> and <span style="font-variant:small-caps;">MinCostDP</span> to find the optimal value. This values is then compared with the target value to decide if the original 3SAT problem instance is satisfiable. The reason why we cannot use <span style="font-variant:small-caps;">Greedy</span> nor <span style="font-variant:small-caps;">FPTAS</span> is that we need the exact optimal value (with no error) to compare with the target.
 
-The procedure seems clear and indeed, we were able to produce the corresponding Decision 0-1 Knapsack for a given instance of 3SAT problem, but we face an interesting problem, which halts our further progress in this experiment. We will discuss this in section \@ref(reduction), _Reduction, Beauty and Peril_.
+The procedure seems clear and indeed, we were able to produce the corresponding Decision 0-1 Knapsack for a given instance of 3SAT problem, but we face an interesting problem, which halts any further progress in this experiment. We will discuss this in section \@ref(reduction), _Reduction, Beauty and Peril_.
